# ros2

./: README.md  README.md.backup  frames_2025-06-20_21.31.55.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/number_square/lib/number_square/: pub_node  sub_node
install/number_square/share/number_square/: package.ps1  package.sh  package.zsh
install/number_square/share/number_square/launch/: launch_nodes.py
install/rover_controller/lib/rover_controller/: cone_detector  emergency_stop  lidar_processor  orange_cone  proximity_warning
install/rover_controller/share/rover_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_controller/share/rover_controller/launch/: gazebo_rviz.launch.py  launch_nodes.launch.py
install/rover_controller/share/rover_controller/model/: empty_world.world  rover_world_with_cones.world
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/number_square/lib/number_square/: pub_node  (+1 more)
src/log/: latest_build
src/number_square/: CMakeLists.txt
src/number_square/src/: number_publisher.cpp  number_square.cpp
src/rover_controller/: CMakeLists.txt
src/rover_controller/model/: robot.xacro
src/rover_controller/rviz/: rover_task_lidar_camera.rviz
src/rover_controller/src/: cone_detector.cpp  controller.cpp  lidar_processor.cpp  proximity_warning.cpp
src_rover/rover_controller/: CMakeLists.txt
src_rover/rover_controller/launch/: gazebo_rviz.launch.py  launch_nodes.launch.py
src_rover/rover_controller/model/: empty_world.world  robot.gazebo
src_rover/rover_controller/src/: emergency_stop.cpp  lidar_processor.cpp  proximity_warning.cpp
(+6 files in other folders)
